--- a/homeworks/Михаил/2. HTML + CSS/index.html
+++ b/homeworks/Михаил/2. HTML + CSS/index.html
@@ -162,6 +162,85 @@
             </div>
         </div>
     </section>
+    <section class="possibilities">
+        <div class="container">
+            <div class="title-label features-label">Возможности</div> 
+            <h2 class="features-title">мобильное приложение убер</h2>
+            <p class="possibilities-afterh2text">
+                Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон
+            </p>
+            <div class="possibilities-container">
+                <div class="possibilities-item">
+                  <div class="possibilities-item-img">
+                        <img src="./assets/possibilities/Card1.svg" alt="Card1">
+                    </div>
+                    <p class="possibilities-item-text">
+                        оформление заказа одним касанием
+                    </p>
+                    <button class="possibilities-item-button">
+                        <div class="plus-vert"></div>
+                        <div class="plus-horiz"></div>
+                    </button>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                          <img src="./assets/possibilities/Card2.svg" alt="Card2">
+                      </div>
+                      <p class="possibilities-item-text">
+                        надежная подача
+                    </p>
+                    <button class="possibilities-item-button">
+                        <div class="plus-vert"></div>
+                        <div class="plus-horiz"></div>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                          <img src="./assets/possibilities/Card3.svg" alt="Card3">
+                      </div>
+                      <p class="possibilities-item-text">
+                        прозрачные цены
+                    </p>
+                    <button class="possibilities-item-button">
+                        <div class="plus-vert"></div>
+                        <div class="plus-horiz"></div>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                          <img src="./assets/possibilities/Card4.svg" alt="Card4">
+                      </div>
+                      <p class="possibilities-item-text">
+                        безналичная оплата
+                    </p>
+                    <button class="possibilities-item-button">
+                        <div class="plus-vert"></div>
+                        <div class="plus-horiz"></div>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                          <img src="./assets/possibilities/Card5.svg" alt="Card5">
+                      </div>
+                      <p class="possibilities-item-text">
+                        обратная связь
+                    </p>
+                    <button class="possibilities-item-button">
+                        <div class="plus-vert"></div>
+                        <div class="plus-horiz"></div>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                          <img src="./assets/possibilities/Card6.svg" alt="Card6">
+                      </div>
+                      <p class="possibilities-item-text">
+                        разделить стоимость поездки
+                    </p>
+                    <button class="possibilities-item-button">
+                        <div class="plus-vert"></div>
+                        <div class="plus-horiz"></div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 </main>
 </body>
 </html>
