4. grid, pseudo elems, transform

--- a/course/2. HTML + CSS/index.html
+++ b/course/2. HTML + CSS/index.html
@@ -162,6 +162,68 @@
             </div>
         </div>
     </section>
+    <section class="possibilities">
+        <div class="container">
+            <p class="title-label possibilities-title-label">Возможности</p>
+            <h2>мобильное приложение убер</h2>
+            <p class="align-center possibilities-title-text">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</p>
+            <div class="possibilities-container">
+                <div class="possibilities-item">
+                    <img class="possibilities-item-bg" src="./assets/possibilities/card1.png" alt="card 1">
+                    <div class="possibilities-item-content">
+                        <p class="align-center">оформление заказа одним касанием</p>
+                        <div class="possibilities-plus"></div>
+                    </div>
+                </div>
+                <div class="possibilities-item">
+                    <img class="possibilities-item-bg" src="./assets/possibilities/card1.png" alt="card 1">
+                    <div class="possibilities-item-content">
+                        <p class="align-center">оформление заказа одним касанием</p>
+                        <div class="possibilities-plus"></div>
+                    </div>
+                </div>
+                <div class="possibilities-item">
+                    <img class="possibilities-item-bg" src="./assets/possibilities/card1.png" alt="card 1">
+                    <div class="possibilities-item-content">
+                        <p class="align-center">оформление заказа одним касанием</p>
+                        <div class="possibilities-plus"></div>
+                    </div>
+                </div>
+                <div class="possibilities-item">
+                    <img class="possibilities-item-bg" src="./assets/possibilities/card1.png" alt="card 1">
+                    <div class="possibilities-item-content">
+                        <p class="align-center">оформление заказа одним касанием</p>
+                        <div class="possibilities-plus"></div>
+                    </div>
+                </div>
+                <div class="possibilities-item">
+                    <img class="possibilities-item-bg" src="./assets/possibilities/card1.png" alt="card 1">
+                    <div class="possibilities-item-content">
+                        <p class="align-center">оформление заказа одним касанием</p>
+                        <div class="possibilities-plus"></div>
+                    </div>
+                </div>
+                <div class="possibilities-item">
+                    <img class="possibilities-item-bg" src="./assets/possibilities/card1.png" alt="card 1">
+                    <div class="possibilities-item-content">
+                        <p class="align-center">оформление заказа одним касанием</p>
+                        <div class="possibilities-plus"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="choice">
+        <div class="choice-top">
+            <p class="title-label title-label_white choice-title-label">Возможности</p>
+            <h2 class="title_white">Выбор - отличная штука!</h2>
+            <p class="align-center text_white">Закажите автомобиль, который подходит вам по стилю и бюджету</p>
+        </div>
+        <img class="choice-car" src="./assets/choice/car.png" alt="Car">
+        <div class="choice-bot">
+            <p class="align-center">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</p>
+        </div>
+    </section>
 </main>
 </body>
 </html>
