--- a/homeworks/Алексей/HTML + CSS/index.html
+++ b/homeworks/Алексей/HTML + CSS/index.html
@@ -162,63 +162,206 @@
             </div>
         </div>
     </section>
-<section class="possibilities">
-    <div class="container">
-        <div class="title-label possibilities-label">возможности</div>
-        <h2 class="possibilities-title">мобильное приложение убер</h2>
-                <p class="possibilities-text">Сделай заказ, соверши поездку и оплати ее стоимость, используя свой мобильный телефон</p>
-        <div class="possibilities-container">
-        <div class="possibilities-item">
-            <div class="possibilities-item-img">
-                <img src="./assets/possibilities/possibilities1.svg">
-            </div>
-            <div class="possibilities-item-text">
-                <p> оформление заказа одним касанием</p>
+    <section class="possibilities">
+        <div class="container">
+            <div class="title-label possibilities-label">возможности</div>
+            <h2 class="possibilities-title">мобильное приложение убер</h2>
+            <p class="text-center">Сделай заказ, соверши поездку и оплати ее стоимость, используя свой мобильный телефон</p>
+            <div class="possibilities-container">
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                        <img src="./assets/possibilities/possibilities1.svg">
+                    </div>
+                    <div class="possibilities-item-text">
+                        <p class="text-center"> оформление заказа одним касанием</p>
+                    </div>
+                    <button class="possibilities-plus">
+                        <div class="possibilities-plus-item">
+                            <div class="hor"></div>
+                            <div class="vert"></div>
+                        </div>
+                    </button>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                        <img src="./assets/possibilities/possibilities2.svg">
+                    </div>
+                    <div class="possibilities-item-text">
+                        <p class="text-center"> надежная подача</p>
+                    </div>
+                    <button class="possibilities-plus">
+                        <div class="possibilities-plus-item">
+                            <div class="hor"></div>
+                            <div class="vert"></div>
+                        </div>
+                    </button>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                        <img src="./assets/possibilities/possibilities3.svg">
+                    </div>
+                    <div class="possibilities-item-text">
+                        <p class="text-center"> прозрачные цены</p>
+                    </div>
+                    <button class="possibilities-plus">
+                        <div class="possibilities-plus-item">
+                            <div class="hor"></div>
+                            <div class="vert"></div>
+                        </div>
+                    </button>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                        <img src="./assets/possibilities/possibilities4.svg">
+                    </div>
+                    <div class="possibilities-item-text">
+                        <p> безналичная оплата</p>
+                    </div>
+                    <button class="possibilities-plus">
+                        <div class="possibilities-plus-item">
+                            <div class="hor"></div>
+                            <div class="vert"></div>
+                        </div>
+                    </button>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                        <img src="./assets/possibilities/possibilities5.svg">
+                    </div>
+                    <div class="possibilities-item-text">
+                        <p> обратная связь</p>
+                    </div>
+                    <button class="possibilities-plus">
+                        <div class="possibilities-plus-item">
+                            <div class="hor"></div>
+                            <div class="vert"></div>
+                        </div>
+                    </button>
+                </div>
+                <div class="possibilities-item">
+                    <div class="possibilities-item-img">
+                        <img src="./assets/possibilities/possibilities6.svg">
+                    </div>
+                    <div class="possibilities-item-text">
+                        <p> разделить стоимость поездки</p>
+                    </div>
+                    <button class="possibilities-plus">
+                        <div class="possibilities-plus-item">
+                            <div class="hor"></div>
+                            <div class="vert"></div>
+                        </div>
+                    </button>
+                </div>
             </div>
         </div>
-        <div class="possibilities-item">
-            <div class="possibilities-item-img">
-                <img src="./assets/possibilities/possibilities1.svg">
-            </div>
-            <div class="possibilities-item-text">
-                <p> надежная подача</p>
+</section>
+    <section class="choice">
+        <div class="choice-top">
+            <p class="title-label title-label_white choice-title-label">Возможности</p>
+            <h2 class="title_white">Выбор - отличная штука!</h2>
+            <p class="text-center text_white">Закажите автомобиль, который подходит вам по стилю и бюджету</p>
+        </div>
+        <img class="choice-car" src="./assets/choice/car.svg" alt="car">
+        <div class="choice-bot">
+            <p class="text-center">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</p>
+        </div>
+    </section>
+    <section class="conditions">
+        <p class="title-label">возможности</p>
+        <h2>условия и требования</h2>
+        <div class="container">
+            <div class="conditions-table">
+                <div class="conditions-table-blue">
+                    <h3 class="text-blue">УСЛОВИЯ: со своим авто:</h3>
+                    <ul class="blue">
+                    <li>Подключаем к системе UBER  под 10%.</li>
+                    <li>Ни каких взносов  0%!</li>
+                    <li>Можем подключать удаленно без приезда в офис</li>
+                    <li>ИП не требуется</li>
+                    <li>Заказы распределяются без учета рейтинга ближайшим водителям</li>
+                    <li>Работа только по безналичному расчету</li>
+                    <li>Деньги перечисляем на карту водителю или наличными в офисе</li>
+                    </ul>
+                    <p class="text-blue-down">В день заработок составляет 7000-12000р + бонус 3000т рублей</p>
+                </div>
+                <div class="conditions-table-blue">
+                    <h3 class="text-blue">УСЛОВИЯ: на авто компании:</h3>
+                    <ul class="blue">
+                    <li>Предоставляем авто без залога</li>
+                    <li>Без ежедневных выплат по аренде</li>
+                    <li>Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</li>
+                    </ul>
+                </div>
+                <div class="conditions-table-red">
+                    <h3 class="text-red">ТРЕБОВАНИЕ:</h3>
+                    <ul class="red">
+                    <li>Наличие автомобиля без рекламы</li>
+                    <li>Автомобиль не должен быть желтый и не с желтыми номерами</li>
+                    <li>Машина не старше 3 лет</li>
+                    <li>Стаж вождения не менее 3 лет</li>
+                    <li>Девайс на системе андроид 4.0 и выше(самсунг)</li>
+                    </ul>
+                </div>
+                <div class="conditions-table-red">
+                    <h3 class="text-red">ДОКУМЕНТЫ:</h3>
+                    <ul class="red">
+                    <li>Права 2 стороны</li>
+                    <li>Паспорт лицевая сторона</li>
+                    <li>СтС</li>
+                    <li>Лицензия (если есть)</li>
+                    <li>Номер телефона</li>
+                    <li>Номер карты для перечисления денег(указать в письме)!</li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <div class="possibilities-item">
-            <div class="possibilities-item-img">
-                <img src="./assets/possibilities/possibilities1.svg">
-            </div>
-            <div class="possibilities-item-text">
-                <p> прозрачные цены</p>
-            </div>
-        </div>
-        <div class="possibilities-item">
-            <div class="possibilities-item-img">
-                <img src="./assets/possibilities/possibilities1.svg">
-            </div>
-            <div class="possibilities-item-text">
-                <p> безналичная оплата</p>
-            </div>
-        </div>
-        <div class="possibilities-item">
-            <div class="possibilities-item-img">
-                <img src="./assets/possibilities/possibilities1.svg">
-            </div>
-            <div class="possibilities-item-text">
-                <p> обратная связь</p>
+    </section>
+    <section class="map">
+            <div class="map-container">
+                <div class="map-top">
+                    <div class="map-top-text">
+                        <p class="title-label title-label_white">города</p>
+                        <h2 class="title_white">По всему миру</h2>
+                        <p class="text-center text_white">Мы в вашем городе и по всему миру</p>
+                    </div>
+                    <div class="map-bottom">
+                    <button class="map-button">посмотреть все города</button>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="possibilities-item">
-            <div class="possibilities-item-img">
-                <img src="./assets/possibilities/possibilities1.svg">
-            </div>
-            <div class="possibilities-item-text">
-                <p> разделитьстоимость поездки</p>
+    </section>
+</main>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-left">
+            <div class="footer-nav-border">
+                <div class="footer-nav-border-img"><img src="./assets/footer/facebook.svg" alt="facebook"></div>
+                <div class="footer-nav-border-img"><img src="./assets/footer/twitter.svg" alt="twitter"></div>
+                <div class="footer-nav-border-img"><img src="./assets/footer/linkedin.svg" alt="linkedin"></div>
+                <div class="footer-nav-border-img"><img src="./assets/footer/instagram.svg" alt="instagram"></div>
             </div>
         </div>
+        <div class="footer-center">
+            <nav class="footer-nav-container">
+                <div class="container">
+                    <ul class="footer-nav">
+                        <li>на главную</li>
+                        <li>города</li>
+                        <li>для водителей</li>
+                        <li>центр поддержки</li>
+                        <li>вакансии</li>
+                        <li>разработчики</li>
+                        <li>блог</li>
+                        <li>о нас</li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="footer-right">
+            <div class="fotter-link"><img src="./assets/footer/link.svg" alt="link's"></div>
         </div>
     </div>
-</section>
-</main>
+</footer>
 </body>
 </html>
