--- a/course/2. HTML + CSS/index.html
+++ b/course/2. HTML + CSS/index.html
@@ -47,7 +47,7 @@
     <section class="promo">
         <div class="container">
             <div class="promo-titles">
-                <h1 class="promo-title">КОМПАНИЯ UBER PARTNERS!</h1>
+                <h1 class="promo-title promo-main-title">КОМПАНИЯ UBER PARTNERS!</h1>
                 <h2 class="promo-title">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
             </div>
             <div class="promo-texts">
@@ -216,14 +216,106 @@
     <section class="choice">
         <div class="choice-top">
             <p class="title-label title-label_white choice-title-label">Возможности</p>
-            <h2 class="title_white">Выбор - отличная штука!</h2>
-            <p class="align-center text_white">Закажите автомобиль, который подходит вам по стилю и бюджету</p>
+            <h2 class="title_white choice-title">Выбор - отличная штука!</h2>
+            <p class="align-center text_white choice-title">Закажите автомобиль, который подходит вам по стилю и бюджету</p>
+            <p class="align-center choice-mobile-text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</p>
         </div>
         <img class="choice-car" src="./assets/choice/car.png" alt="Car">
         <div class="choice-bot">
             <p class="align-center">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</p>
         </div>
     </section>
+    <section class="rules">
+        <div class="container">
+            <p class="title-label">возможности</p>
+            <h2>условия и требования</h2>
+            <div class="rules-container">
+                <div class="rules-item">
+                    <p class="rules-item-title text-blue">УСЛОВИЯ: со своим авто:</p>
+                    <ul class="rules-item-list">
+                        <li>Подключаем к системе UBER под 10%.</li>
+                        <li>Ни каких взносов 0%!</li>
+                        <li>Можем подключать удаленно без приезда в офис</li>
+                        <li>ИП не требуется</li>
+                        <li>Заказы распределяются без учета рейтинга ближайшим водителям</li>
+                        <li>Работа только по безналичному расчету</li>
+                        <li>Деньги перечисляем на карту водителю или наличными в офисе</li>
+                    </ul>
+                    <p class="text-blue">В день заработок составляет 7000-12000р + бонус 3000т рублей</p>
+                </div>
+                <div class="rules-item">
+                    <p class="rules-item-title text-blue">УСЛОВИЯ: на авто компании:</p>
+                    <ul class="rules-item-list">
+                        <li>Предоставляем авто без залога</li>
+                        <li>Без ежедневных выплат по аренде</li>
+                        <li>Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</li>
+                    </ul>
+                </div>
+                <div class="rules-item">
+                    <p class="rules-item-title text-blue">ТРЕБОВАНИЕ:</p>
+                    <ul class="rules-item-list">
+                        <li>Наличие автомобиля без рекламы</li>
+                        <li>Автомобиль не должен быть желтый и не с желтыми номерами</li>
+                        <li>Машина не старше 3 лет</li>
+                        <li>Стаж вождения не менее 3 лет</li>
+                        <li>Девайс на системе андроид 4.0 и выше(самсунг)</li>
+                    </ul>
+                </div>
+                <div class="rules-item">
+                    <p class="rules-item-title text-blue">ДОКУМЕНТЫ:</p>
+                    <ul class="rules-item-list">
+                        <li>Права 2 стороны</li>
+                        <li>Паспорт лицевая сторона</li>
+                        <li>СтС</li>
+                        <li>Лицензия (если есть)</li>
+                        <li>Номер телефона</li>
+                        <li>Номер карты для перечисления денег(указать в письме)!</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="map">
+        <div class="container">
+            <div class="map-container">
+                <div class="map-top">
+                    <p class="title-label title-label_white">города</p>
+                    <h2 class="title_white">По всему миру</h2>
+                    <p class="map-subtitle">Мы в вашем городе и по всему миру</p>
+                </div>
+                <p class="text-blue">посмотреть все города</p>
+            </div>
+        </div>
+    </section>
 </main>
+<footer class="footer">
+    <div class="footer-line"></div>
+    <div class="footer-container">
+        <div class="footer-flex">
+            <div class="footer-link"><img src="./assets/footer/fb.svg" alt=""></div>
+            <div class="footer-link"><img src="./assets/footer/twitter.svg" alt=""></div>
+            <div class="footer-link"><img src="./assets/footer/linkedin.svg" alt=""></div>
+            <div class="footer-link"><img src="./assets/footer/instagram.svg" alt=""></div>
+        </div>
+        <div class="footer-mid">
+            <div class="footer-grid footer-grid_3">
+                <p class="footer-item footer-item_big">на главную</p>
+                <p class="footer-item footer-item_big">города</p>
+                <p class="footer-item footer-item_big">для водителей</p>
+            </div>
+            <div class="footer-grid footer-grid_5">
+                <p class="footer-item">центр поддержки</p>
+                <p class="footer-item">вакансии</p>
+                <p class="footer-item">разработчики</p>
+                <p class="footer-item">блог</p>
+                <p class="footer-item">о нас</p>
+            </div>
+            <div class="footer-grid footer-grid_1">
+                <p class="footer-item text-blue">русский</p>
+            </div>
+        </div>
+        <img class="footer-links" src="./assets/footer/links.png" alt="">
+    </div>
+</footer>
 </body>
 </html>
